kube/services/netpolicy/sheepdog_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-sheepdog
spec:
  podSelector:
    matchLabels:
      app: sheepdog
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: sheepdog
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: sheepdog
      - podSelector:
          matchLabels:
            app: indexd
      - podSelector:
          matchLabels:
            app: fence
      - ipBlock:
           cidr: GEN3_SHEEPDOG_DBIP/32
  policyTypes:
   - Ingress
   - Egress
